refact: project restructure

--- a/tests/Commands.UnitsTests/Commands.UnitTests.csproj
+++ b/tests/Commands.UnitsTests/Commands.UnitTests.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <RootNamespace>Kappelhoj.FoodPlanner.Commands.UnitTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -22,8 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\FoodPlanner.Application.Core\FoodPlanner.Core.csproj" />
-    <ProjectReference Include="..\..\src\FoodPlanner.Queries\FoodPlanner.Queries.csproj" />
+    <ProjectReference Include="..\..\src\Commands\Commands.csproj" />
   </ItemGroup>
 
 </Project>
