--- a/src/Commands/Commands.csproj
+++ b/src/Commands/Commands.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <RootNamespace>Kappelhoj.FoodPlanner.Commands</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FoodPlanner.Application.Core\FoodPlanner.Core.csproj" />
-    <ProjectReference Include="..\FoodPlanner.Domain\FoodPlanner.Domain.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
-
+  
 </Project>
